Archive2/a8/973c53e8619a7e/output
main.cpp:1:11: error: 'long long long' is too long for GCC
 long long long time;
           ^
